--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </main>
 
         <footer>
-            <p>📞 Contact: morgan@bargainmart.retro | 🌐 Est. 2025</p>
+            <p>📞 DM for enquires | 🌐 Est. 2025</p>
             <p class="blink">✨ ALL SALES FINAL ✨</p>
         </footer>
     </div>
