--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Morgan's Bargain Mart - Retro Sale</title>
+    <title>Morgan's Bargain Mart</title>
     <link rel="stylesheet" href="style.css">
     <script src="products.js"></script>
 </head>
